refactor(ALT): Align AddressLookupTable implementation with Solana docs
- Update AddressTableLookup class structure
- Refine AddressLookupTableProgram instruction creation
- Fix extendLookupTable to use 3 keys instead of 4
- Adjust unit tests to reflect changes
- Ensure compatibility with Solana Address Lookup Table specifications